--- a/MessiahSolutionsComFrontEnd/Views/Services.cshtml
+++ b/MessiahSolutionsComFrontEnd/Views/Services.cshtml
@@ -106,7 +106,7 @@
     <div class="container-wide">
         @*<h3>Our Advantages</h3>
             <div class="divider divider-default"></div>*@
-        <a href="@titleLinkAFewWordsAboutUs" class="animated-title-divider longer">
+        <a href="@ourAdvantagesTitleLink" class="animated-title-divider longer">
             <h3>@Model.Value("ourAdvantagesTitle")</h3>
             <div class="divider divider-default"></div>
         </a>
