--- a/MessiahSolutionsComFrontEnd/css/custom-new.css
+++ b/MessiahSolutionsComFrontEnd/css/custom-new.css
@@ -70,7 +70,7 @@
 
 
 a.animated-title-divider {
-    height: 100%;
+    /*height: 100%;*/
     width: 100%;
     display: block;     
     margin: 0 0 0 0;
@@ -195,7 +195,7 @@ section .container-wide article .read-more
 {
     position:absolute;
     bottom: 12px;
-    left:42px;
+    left:44px;
 }
 
 div.ArticleWrapper.col-xl-3 {
